testing/Travis/testcases/prototype/shouldSucceed/Try46.adl
CONTEXT SelectExprTest IN ENGLISH

PURPOSE PATTERN SelectExprTest IN ENGLISH 
{+
This pattern is meant to test the translation of Terms in Ampersand into
SELECT statements in SQL.
+}

PATTERN SelectExprTest
  RELATION s[B*C]
  RELATION t[D*C]
ENDPATTERN

RULE equiv: s~\t~ = (t/s)~

ENDCONTEXT
